# MovieManagement

./: CMakeLists.txt  Start Application.cpp
Domain/: Movie.cpp  Movie.h
Repositories/: RepositoryForAdministrator.cpp  RepositoryForAdministrator.h  RepositoryForUser.cpp  RepositoryForUser.h
Service/: ServiceForMovies.cpp  ServiceForMovies.h
Tests/: Tests.cpp  Tests.h
UI/: Console.cpp  Console.h
Utils/: DynamicArray.cpp  DynamicArray.h  Utilities.cpp  Utilities.h  ValidatorForMovie.cpp  ValidatorForMovie.h
